对代码进行了修改调整，并检查异常部分