@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.zup</groupId>
-    <artifactId>realwave-apns-http2</artifactId>
-    <version>0.0.2</version>
+    <artifactId>java-apns-http2</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>realwave-apns-http2</name>
@@ -15,7 +15,13 @@
         <project.build.java>1.7</project.build.java>
         <netty.version>4.1.1.Final</netty.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+		<maven.build.timestamp.format>yyyyMMddHHmmss</maven.build.timestamp.format>
+		<timestamp>${maven.build.timestamp}</timestamp>
+		<right.version>EZVIZ TECHNOLOGIES CO.,LTD</right.version>
+		<org.springframework-version>4.1.7.RELEASE</org.springframework-version>
+		<org.aspectj-version>1.7.4</org.aspectj-version>
+		<org.slf4j-version>1.7.2</org.slf4j-version>
+	</properties>
 
     <dependencies>
         <dependency>
@@ -26,7 +32,7 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-tcnative-boringssl-static</artifactId>
-            <version>1.1.33.Fork17</version>
+            <version>1.1.33.Fork20</version>
         </dependency>
 
         <dependency>
@@ -48,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
+            <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.6</version>
             <scope>test</scope>
         </dependency>
@@ -86,42 +92,78 @@
       </repositories>
 
     <distributionManagement>
-        <repository>
-            <id>internal-zup</id>
-            <name>internal release repository</name>
-            <url>http://archiva.aws.zup.com.br/repository/internal/</url>
-        </repository>
-        <snapshotRepository>
-            <id>snapshots-zup</id>
-            <name>internal snapshot repository</name>
-            <url>http://archiva.aws.zup.com.br/repository/snapshots/</url>
-        </snapshotRepository>
-    </distributionManagement>
+
+		<!-- release -->
+		<repository>
+			<id>civil-release</id>
+			<name>civil-release</name>
+			<url>http://maven.hikvision.com.cn/nexus/content/repositories/civil-release/</url>
+		</repository>
+
+		<!-- snapshot -->
+		<snapshotRepository>
+			<id>civil-snapshot</id>
+			<name>civil-snapshot</name>
+			<url>http://maven.hikvision.com.cn/nexus/content/repositories/civil-snapshot/</url>
+		</snapshotRepository>
+	</distributionManagement>
 
     <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-source-plugin</artifactId>
-                <version>2.2.1</version>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
+		<resources>
+			<resource>
+				<directory>src/main/java</directory>
+			</resource>
+		</resources>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<encoding>${project.build.sourceEncoding}</encoding>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-install-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m</argLine>
+					<excludes>
+						<exclude>**/TestCase.java</exclude>
+					</excludes>
+					<forkMode>always</forkMode>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
